Corrigindo nomes de arquivos e caminhos das imagens do carrossel

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         <section class="carrossel">
       <div class="carrossel-container">
         <div class="carrossel-track">
-          <img src="/imagens/banner apresentação.png" alt="Imagem 1">
-          <img src="/imagens/banner pilates.png" alt="Imagem 2">
-          <img src="/imagens/banner promo 1.png" alt="Imagem 3">
-          <img src="/imagens/banner promo 2.png" alt="Imagem 4">
+          <img src="imagens/banner-apresentaçao.png" alt="Imagem 1">
+          <img src="imagens/banner-pilates.png" alt="Imagem 2">
+          <img src="imagens/banner-promo1.png" alt="Imagem 3">
+          <img src="imagens/banne-promo2.png" alt="Imagem 4">
         </div>
       </div>
     </section>
