Corrigindo rotas de links

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="carrossel-track">
           <img src="imagens/banner-apresentaçao.png" alt="Imagem 1">
           <img src="imagens/banner-pilates.png" alt="Imagem 2">
-          <img src="imagens/banner-promo1.png" alt="Imagem 3">
-          <img src="imagens/banne-promo2.png" alt="Imagem 4">
+          <img src="imagens/banner-promo-1.png" alt="Imagem 3">
+          <img src="imagens/banne-promo-2.png" alt="Imagem 4">
         </div>
       </div>
     </section>
@@ -451,10 +451,10 @@
                 <div class="footer-section">
                     <h4>Serviços</h4>
                     <ul>
-                        <li><a href="/trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                        <li><a href="/musculação.html">Musculação</a></li>
-                        <li><a href="/cardio.html">Cardio</a></li>
-                        <li><a href="/aulasgrupo.html">Aulas em Grupo</a></li>
+                        <li><a href="/Adrenaline/trabalhe-conosco.html">Trabalhe Conosco</a></li>
+                        <li><a href="/Adrenaline/musculação.html">Musculação</a></li>
+                        <li><a href="/Adrenaline/cardio.html">Cardio</a></li>
+                        <li><a href="/Adrenaline/aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
