--- a/index.html
+++ b/index.html
@@ -451,10 +451,10 @@
                 <div class="footer-section">
                     <h4>Serviços</h4>
                     <ul>
-                        <li><a href="/Adrenaline/trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                        <li><a href="/Adrenaline/musculação.html">Musculação</a></li>
-                        <li><a href="/Adrenaline/cardio.html">Cardio</a></li>
-                        <li><a href="/Adrenaline/aulasgrupo.html">Aulas em Grupo</a></li>
+                    <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
+                    <li><a href="musculação.html">Musculação</a></li>
+                    <li><a href="cardio.html">Cardio</a></li>
+                    <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
