--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <h4>Serviços</h4>
                     <ul>
                     <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                    <li><a href="musculação.html">Musculação</a></li>
+                    <li><a href="musculaçao.html">Musculação</a></li>
                     <li><a href="cardio.html">Cardio</a></li>
                     <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
