Corrige nomes de arquivos e links

--- a/index.html
+++ b/index.html
@@ -435,7 +435,9 @@
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>git add .
+git commit -m "Corrige nomes de arquivos e links"
+git push
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
@@ -451,10 +453,10 @@
                 <div class="footer-section">
                     <h4>Serviços</h4>
                     <ul>
-                    <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                    <li><a href="musculaçao.html">Musculação</a></li>
-                    <li><a href="cardio.html">Cardio</a></li>
-                    <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
+                     <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
+                     <li><a href="musculacao.html">Musculação</a></li> <!-- sem ç no arquivo -->
+                     <li><a href="cardio.html">Cardio</a></li>
+                     <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
