Corrige nomes de arquivos e links

--- a/index.html
+++ b/index.html
@@ -435,9 +435,7 @@
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>git add .
-git commit -m "Corrige nomes de arquivos e links"
-git push
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
