--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <h4>Serviços</h4>
                     <ul>
                      <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                     <li><a href="musculacao.html">Musculação</a></li> <!-- sem ç no arquivo -->
+                     <li><a href="musculacao.html">Musculação</a></li>
                      <li><a href="cardio.html">Cardio</a></li>
                      <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
