--- a/musculacao.html
+++ b/musculacao.html
@@ -99,11 +99,10 @@
                 </div>
                 <div class="footer-section">
                     <h4>Serviços</h4>
-                    <ul>
-                        <li><a href="/trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                        <li><a href="/musculação.html">Musculação</a></li>
-                        <li><a href="/cardio.html">Cardio</a></li>
-                        <li><a href="/aulasgrupo.html">Aulas em Grupo</a></li>
+                    <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
+                     <li><a href="musculacao.html">Musculação</a></li>
+                     <li><a href="cardio.html">Cardio</a></li>
+                     <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
