--- a/aulasgrupo.html
+++ b/aulasgrupo.html
@@ -33,7 +33,7 @@
     </nav>
 
     <main id="main-content">
-        <section class="hero" style="background-image: url("imagens/aulas-em-grupo-banner.jpg")>;
+        <section class="hero" style="background-image: url('imagens/aulas-em-grupo-banner.jpg')">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Aulas em Grupo</h1>
@@ -101,10 +101,11 @@
                 </div>
                 <div class="footer-section">
                     <h4>Serviços</h4>
-                    <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-                     <li><a href="musculacao.html">Musculação</a></li>
-                     <li><a href="cardio.html">Cardio</a></li>
-                     <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
+                    <ul>
+                        <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
+                        <li><a href="musculacao.html">Musculação</a></li>
+                        <li><a href="cardio.html">Cardio</a></li>
+                        <li><a href="aulasgrupo.html">Aulas em Grupo</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -122,6 +123,5 @@
         </div>
     </footer>
     <script src="script.js"></script>
-</body>
 </body>
 </html>
