--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
                 <div class="footer-section">
                     <h4>Links Rápidos</h4>
                     <ul>
-                        <li><a href="/index.html#home">Início</a></li>
-                        <li><a href="/index.html#about">Sobre</a></li>
-                        <li><a href="/index.html#services">Serviços</a></li>
-                        <li><a href="/index.html#contact">Contato</a></li>
+                        <li><a href="#home">Início</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#services">Serviços</a></li>
+                        <li><a href="#contact">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
